# mlxlab

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
benchmarks/: bench_dp5.py  bench_dp5_julia.jl  bench_dp5_matlab.m  bench_julia.jl  bench_matlab.m  bench_matlab_5000.m  bench_ode.py  pyproject.toml  results.json  results_dp5.json  results_dp5_julia.json  results_dp5_matlab.txt
src/mlxlab/: __init__.py
src/mlxlab/integrate/: __init__.py  _adaptive.py  _api.py  _base.py  _fixed.py  _precision.py  _solution.py  _stepsize.py  _stochastic.py  _tableau.py
src/mlxlab/linalg/: __init__.py  _core.py
src/mlxlab/random/: __init__.py  _distributions.py
src/mlxlab/signal/: __init__.py  _core.py
tests/: test_integrate.py  test_linalg.py  test_random.py  test_signal.py
