[project]
name = "mlxlab-benchmarks"
version = "0.1.0"
description = "Benchmark suite for mlxlab vs competitors"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.20.0",
    "numpy<2.4",
    "scipy>=1.12,<1.17",
    "torch>=2.4",
    "torchdiffeq>=0.2.4",
    "matplotlib>=3.8",
    "tabulate>=0.9",
]

[tool.uv.sources]
mlxlab = { path = ".." }
